// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template.ts 引入 import 正常情况 import src 为绝对路径 1`] = `
"import { Block, View } from \\"@tarojs/components\\";
import React from \\"react\\";
import Taro from \\"@tarojs/taro\\";
import withWeapp from \\"@tarojs/with-weapp\\";
@withWeapp({})
class TemplateDemoTmpl extends React.Component {
  render() {
    return <Block><View>模版DEMO</View></Block>;
  }
}
export default TemplateDemoTmpl;"
`;

exports[`template.ts 引入 import 正常情况 import 引入template 1`] = `
"import { Block, View } from \\"@tarojs/components\\";
import React from \\"react\\";
import Taro from \\"@tarojs/taro\\";
import withWeapp from \\"@tarojs/with-weapp\\";
@withWeapp({})
class TemplateDemoTmpl extends React.Component {
  render() {
    return <Block><View>模版DEMO</View></Block>;
  }
}
export default TemplateDemoTmpl;"
`;

exports[`template.ts 引入 include 正常情况 include 引入 header文件 1`] = `
"import { Block, Text } from \\"@tarojs/components\\";
import React from \\"react\\";
import Taro from \\"@tarojs/taro\\";
const {
  default: withWeapp
} = require(\\"@tarojs/with-weapp\\");
Page({});
@withWeapp(cacheOptions.getOptionsFromCache())
class _C extends React.Component {
  render() {
    return <Text>header.wxml</Text>;
  }
}
export default _C;"
`;

exports[`template.ts 模板 当template同时使用外部工具类和data传递数据 1`] = `
"import { Block, Text, View } from \\"@tarojs/components\\";
import React from \\"react\\";
import Taro from \\"@tarojs/taro\\";
import withWeapp from \\"@tarojs/with-weapp\\";
import myFunc from \\"../components/LunaComponent/utils/myFunc.wxs.js\\";
import Tim from \\"../components/LunaComponent/utils/timFunc.wxs.js\\";
@withWeapp({})
class HuangyeTmpl extends React.Component {
  render() {
    const {
      data: {
        info
      }
    } = this.props;
    return <Block><Text>{myFunc.getMsg}</Text><View>{Tim.getMsg}</View><View>{'姓名：' + info.name + '年龄：' + info.age}</View></Block>;
  }
}
export default HuangyeTmpl;"
`;

exports[`template.ts 模板 直接使用页面中的模板，转换后会创建模板文件 1`] = `
"import { Block, View, Text } from \\"@tarojs/components\\";
import React from \\"react\\";
import Taro from \\"@tarojs/taro\\";
const {
  default: withWeapp
} = require(\\"@tarojs/with-weapp\\");
Page({
  data: {
    item: {
      index: 0,
      msg: 'this is a template',
      time: '2016-09-15'
    }
  }
});
@withWeapp(cacheOptions.getOptionsFromCache())
class _C extends React.Component {
  render() {
    const {
      item
    } = this.data;
    return <MsgItemTmpl data={item}></MsgItemTmpl>;
  }
}
export default _C;"
`;

exports[`template.ts 模板 直接使用页面中的模板，转换后会创建模板文件 2`] = `
"import { Block, View, Text } from \\"@tarojs/components\\";
import React from \\"react\\";
import Taro from \\"@tarojs/taro\\";
import withWeapp from \\"@tarojs/with-weapp\\";
@withWeapp({})
class MsgItemTmpl extends React.Component {
  render() {
    const {
      data: {
        index,
        msg,
        time
      }
    } = this.props;
    return <Block><View><Text>{index + \\": \\" + msg}</Text><Text>{\\"Time: \\" + time}</Text></View></Block>;
  }
}
export default MsgItemTmpl;"
`;
